--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-nutritionix",
-  "version": "0.0.3",
+  "name": "nutritionix",
+  "version": "0.0.4",
   "description": "Official Nutritionix NodeJS Client Library",
   "main": "index.js",
   "directories": {
