--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "async": "~0.2.10",
     "bluebird": "^2.3.11",
     "colors": "~0.6.2",
+    "lib-loader": "^0.4.0",
     "lodash": "^2.4.1",
     "request": "~2.33.0"
   },
